--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Test de Habilidades Blandas</h1>
+        <h1>Test de adaptabilidad</h1>
     </header>
     <main>
         <!-- Aquí irá el contenido del test -->
