--- a/test.html
+++ b/test.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test de Adaptabilidad</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <video autoplay muted loop id="video-background">
+        <source src="video\58193-487176852.mp4" type="video/mp4">
+    </video>
+    <div class="container">
+        <header>
+            <h1>Test de Adaptabilidad</h1>
+        </header>
+        <div id="test-container">
+        </div>
+        <div id="result-container" style="display: none;">
+        </div>
+        <a href="credits.html" class="btn-credits">Créditos</a>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
 
