--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test de adaptabilidad </title>
+    <title>Inicio - Test de Adaptabilidad</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Test de adaptabilidad</h1>
-    </header>
-    <main>
-        <!-- Aquí irá el contenido del test -->
-    </main>
-    <footer>
-        <p>&copy; 2024 TuNombre</p>
-    </footer>
-    <script src="script.js"></script>
+    <video autoplay muted loop id="video-background">
+        <source src="video\35506-405897842.mp4" type="video/mp4">
+    </video>
+    <div class="container">
+        <header>
+            <h1>Test de Adaptabilidad</h1>
+        </header>
+        <div class="content">
+            <p>¿Quieres saber cuán adaptable eres? Realiza nuestro test y descúbrelo.</p>
+            <a href="test.html" class="btn">Iniciar Test</a>
+        </div>
+        <footer>
+            <p>© 2024 Test de Adaptabilidad. Todos los derechos reservados.</p>
+        </footer>
+    </div>
 </body>
 </html>
-
