--- a/creditos.html
+++ b/creditos.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Créditos - Test de Adaptabilidad</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>Créditos</h1>
+        </header>
+        <div class="content">
+            <p>Aquí puedes incluir información sobre quién realizó el proyecto, agradecimientos, fuentes de información, etc.</p>
+        </div>
+        <footer>
+            <p>© 2024 Test de Adaptabilidad. Todos los derechos reservados.</p>
+        </footer>
+    </div>
+</body>
+</html>
 
