--- a/creditos.html
+++ b/creditos.html
@@ -7,17 +7,25 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <video autoplay muted loop id="video-background">
+        <source src="video\67358-521707474_tiny.mp4" type="video/mp4">
+    </video>
     <div class="container">
         <header>
             <h1>Créditos</h1>
         </header>
         <div class="content">
-            <p>Aquí puedes incluir información sobre quién realizó el proyecto, agradecimientos, fuentes de información, etc.</p>
-        </div>
+            <p><strong>Desarrollador:</strong> ROBERTO CARLOS AGUILAR</p>
+            <p><strong>Diseñador:</strong> ROBERTO CARLOS AGUILAR </p>
+            <p><strong>Recursos visuales:</strong>Videos de pixabay</p>
+            <p><strong>Agradecimientos especiales:</strong>Quiero expresar mi más sincero agradecimiento a mi equipo de trabajo, profesores, tutores y fuentes de ayuda.</p>
+            <p><strong>Tecnologías utilizadas:</strong> HTML, CSS, JavaScript,netlify</p>
+            <p><strong>Fecha de creación:</strong> 4/18/2024</p>
+            <p><strong>Código fuente:</strong> <a href="#">Enlace al repositorio en GitHub</a></p>
+            <p><strong>Documentacion:</strong> <a href="#">Enlace a la Documentacion</a></p>
         <footer>
             <p>© 2024 Test de Adaptabilidad. Todos los derechos reservados.</p>
         </footer>
     </div>
 </body>
 </html>
-
