--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <video autoplay muted loop id="video-background">
-        <source src="video\35506-405897842.mp4" type="video/mp4">
+        <source src="video\35506-405897842 - Compressed with FlexClip.mp4" type="video/mp4">
     </video>
     <div class="container">
         <header>
+            <img src="imagenes\IMG_0098-removebg-preview.png" alt="Logo de mi página">
             <h1>Test de Adaptabilidad</h1>
         </header>
         <div class="content">
