--- a/test.html
+++ b/test.html
@@ -8,19 +8,20 @@
 </head>
 <body>
     <video autoplay muted loop id="video-background">
-        <source src="video\58193-487176852.mp4" type="video/mp4">
+        <source src="video\20072-307163785_small.mp4" type="video/mp4">
     </video>
     <div class="container">
-        <header>
+        <header class="header">
+            <img src="imagenes\IMG_0098-removebg-preview.png" alt="Logo de mi página" class="logo">
             <h1>Test de Adaptabilidad</h1>
         </header>
+        
         <div id="test-container">
         </div>
         <div id="result-container" style="display: none;">
         </div>
-        <a href="credits.html" class="btn-credits">Créditos</a>
+        <a href="creditos.html" class="btn-credits">Créditos</a>
     </div>
     <script src="script.js"></script>
 </body>
 </html>
-
